--- a/ValidationData/TP/additional/hgmd_non_splicing_for_script.ipynb
+++ b/ValidationData/TP/additional/hgmd_non_splicing_for_script.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,18 +169,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from cyvcf2 import VCF, Writer\n",
+    "chr: str = \"22\"\n",
+    "raw_vcf: str = f\"splai_vep_vcfs/hgmd_dm/all_DM_chr{chr}.splai.vep.nondel.vcf\"\n",
+    "\n",
+    "psps_description = 'Priortiy Score for Pathogenic Splicing variant screening, ranging 0-9, more higher, more likely pathogenic. -1 means not available'\n",
+    "\n",
+    "vcf = VCF(raw_vcf)\n",
+    "vcf.add_info_to_header(\n",
+    "\t{'ID': 'PSPS', \n",
+    "  'Description': psps_description, \n",
+    "  'Type':'Integer', \n",
+    "  'Number': '1',\n",
+    "  'HeaderType': 'INFO'\n",
+    "  }\n",
+    "  )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cyvcf2 import VCF, Writer\n",
-    "vcf = VCF(raw_vcf)\n",
     "header = vcf.header_iter()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -194,13 +226,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "vcf.add_info_to_header(\n",
-    "\t{'ID': 'PSPS', \n",
-    "  'Description': 'Priortiy Score for Pathogenic Splicing variant screening', \n",
-    "  'Type':'Integer', 'Number': '1'}\n",
-    "  )"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -273,397 +299,6 @@
    "source": [
     "for h in header:\n",
     "\tprint(h)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<_cython_3_0_10.generator at 0x123636040>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "header"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CHROM</th>\n",
-       "      <th>POS</th>\n",
-       "      <th>REF</th>\n",
-       "      <th>ALT</th>\n",
-       "      <th>GeneSymbol</th>\n",
-       "      <th>SymbolSource</th>\n",
-       "      <th>HGNC_ID</th>\n",
-       "      <th>ENST</th>\n",
-       "      <th>HGVSc</th>\n",
-       "      <th>Consequence</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Strand</th>\n",
-       "      <th>DS_AG</th>\n",
-       "      <th>DS_AL</th>\n",
-       "      <th>DS_DG</th>\n",
-       "      <th>DS_DL</th>\n",
-       "      <th>DP_AG</th>\n",
-       "      <th>DP_AL</th>\n",
-       "      <th>DP_DG</th>\n",
-       "      <th>DP_DL</th>\n",
-       "      <th>MaxSpliceAI</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>22</td>\n",
-       "      <td>17565982</td>\n",
-       "      <td>A</td>\n",
-       "      <td>C</td>\n",
-       "      <td>IL17RA</td>\n",
-       "      <td>HGNC</td>\n",
-       "      <td>5985</td>\n",
-       "      <td>ENST00000319363</td>\n",
-       "      <td>c.1A&gt;C</td>\n",
-       "      <td>start_lost</td>\n",
-       "      <td>...</td>\n",
-       "      <td>+</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>2870</td>\n",
-       "      <td>3730</td>\n",
-       "      <td>192</td>\n",
-       "      <td>137</td>\n",
-       "      <td>0.01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>22</td>\n",
-       "      <td>17566091</td>\n",
-       "      <td>ACCACCGGG</td>\n",
-       "      <td>A</td>\n",
-       "      <td>IL17RA</td>\n",
-       "      <td>HGNC</td>\n",
-       "      <td>5985</td>\n",
-       "      <td>ENST00000319363</td>\n",
-       "      <td>c.112_119del</td>\n",
-       "      <td>frameshift_variant</td>\n",
-       "      <td>...</td>\n",
-       "      <td>+</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>2761</td>\n",
-       "      <td>1059</td>\n",
-       "      <td>585</td>\n",
-       "      <td>212</td>\n",
-       "      <td>0.01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>22</td>\n",
-       "      <td>17577977</td>\n",
-       "      <td>G</td>\n",
-       "      <td>A</td>\n",
-       "      <td>IL17RA</td>\n",
-       "      <td>HGNC</td>\n",
-       "      <td>5985</td>\n",
-       "      <td>ENST00000319363</td>\n",
-       "      <td>c.163+1G&gt;A</td>\n",
-       "      <td>splice_donor_variant</td>\n",
-       "      <td>...</td>\n",
-       "      <td>+</td>\n",
-       "      <td>0.17</td>\n",
-       "      <td>0.32</td>\n",
-       "      <td>0.21</td>\n",
-       "      <td>0.96</td>\n",
-       "      <td>47</td>\n",
-       "      <td>96</td>\n",
-       "      <td>45</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>0.96</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>22</td>\n",
-       "      <td>17578687</td>\n",
-       "      <td>G</td>\n",
-       "      <td>GTACC</td>\n",
-       "      <td>IL17RA</td>\n",
-       "      <td>HGNC</td>\n",
-       "      <td>5985</td>\n",
-       "      <td>ENST00000319363</td>\n",
-       "      <td>c.166_169dup</td>\n",
-       "      <td>frameshift_variant&amp;splice_region_variant</td>\n",
-       "      <td>...</td>\n",
-       "      <td>+</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>784</td>\n",
-       "      <td>59</td>\n",
-       "      <td>-518</td>\n",
-       "      <td>-477</td>\n",
-       "      <td>0.04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>22</td>\n",
-       "      <td>17578779</td>\n",
-       "      <td>C</td>\n",
-       "      <td>T</td>\n",
-       "      <td>IL17RA</td>\n",
-       "      <td>HGNC</td>\n",
-       "      <td>5985</td>\n",
-       "      <td>ENST00000319363</td>\n",
-       "      <td>c.256C&gt;T</td>\n",
-       "      <td>stop_gained</td>\n",
-       "      <td>...</td>\n",
-       "      <td>+</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.08</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>-706</td>\n",
-       "      <td>-33</td>\n",
-       "      <td>767</td>\n",
-       "      <td>54</td>\n",
-       "      <td>0.08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4091</th>\n",
-       "      <td>22</td>\n",
-       "      <td>51066161</td>\n",
-       "      <td>C</td>\n",
-       "      <td>T</td>\n",
-       "      <td>ARSA</td>\n",
-       "      <td>HGNC</td>\n",
-       "      <td>713</td>\n",
-       "      <td>ENST00000216124</td>\n",
-       "      <td>c.47G&gt;A</td>\n",
-       "      <td>missense_variant</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>59</td>\n",
-       "      <td>-744</td>\n",
-       "      <td>258</td>\n",
-       "      <td>165</td>\n",
-       "      <td>0.04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4092</th>\n",
-       "      <td>22</td>\n",
-       "      <td>51066170</td>\n",
-       "      <td>A</td>\n",
-       "      <td>T</td>\n",
-       "      <td>ARSA</td>\n",
-       "      <td>HGNC</td>\n",
-       "      <td>713</td>\n",
-       "      <td>ENST00000216124</td>\n",
-       "      <td>c.38T&gt;A</td>\n",
-       "      <td>missense_variant</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-</td>\n",
-       "      <td>0.20</td>\n",
-       "      <td>0.08</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>-2</td>\n",
-       "      <td>50</td>\n",
-       "      <td>-576</td>\n",
-       "      <td>249</td>\n",
-       "      <td>0.20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4093</th>\n",
-       "      <td>22</td>\n",
-       "      <td>51066173</td>\n",
-       "      <td>GC</td>\n",
-       "      <td>G</td>\n",
-       "      <td>ARSA</td>\n",
-       "      <td>HGNC</td>\n",
-       "      <td>713</td>\n",
-       "      <td>ENST00000216124</td>\n",
-       "      <td>c.34del</td>\n",
-       "      <td>frameshift_variant</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-</td>\n",
-       "      <td>0.12</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>47</td>\n",
-       "      <td>-316</td>\n",
-       "      <td>-432</td>\n",
-       "      <td>153</td>\n",
-       "      <td>0.12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4094</th>\n",
-       "      <td>22</td>\n",
-       "      <td>51066176</td>\n",
-       "      <td>A</td>\n",
-       "      <td>G</td>\n",
-       "      <td>ARSA</td>\n",
-       "      <td>HGNC</td>\n",
-       "      <td>713</td>\n",
-       "      <td>ENST00000216124</td>\n",
-       "      <td>c.32T&gt;C</td>\n",
-       "      <td>missense_variant</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>-319</td>\n",
-       "      <td>44</td>\n",
-       "      <td>-582</td>\n",
-       "      <td>243</td>\n",
-       "      <td>0.04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4095</th>\n",
-       "      <td>22</td>\n",
-       "      <td>51066194</td>\n",
-       "      <td>GC</td>\n",
-       "      <td>G</td>\n",
-       "      <td>ARSA</td>\n",
-       "      <td>HGNC</td>\n",
-       "      <td>713</td>\n",
-       "      <td>ENST00000216124</td>\n",
-       "      <td>c.13del</td>\n",
-       "      <td>frameshift_variant</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-</td>\n",
-       "      <td>0.15</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>26</td>\n",
-       "      <td>-337</td>\n",
-       "      <td>-453</td>\n",
-       "      <td>-505</td>\n",
-       "      <td>0.15</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>4096 rows × 22 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     CHROM       POS        REF    ALT GeneSymbol SymbolSource HGNC_ID  \\\n",
-       "0       22  17565982          A      C     IL17RA         HGNC    5985   \n",
-       "1       22  17566091  ACCACCGGG      A     IL17RA         HGNC    5985   \n",
-       "2       22  17577977          G      A     IL17RA         HGNC    5985   \n",
-       "3       22  17578687          G  GTACC     IL17RA         HGNC    5985   \n",
-       "4       22  17578779          C      T     IL17RA         HGNC    5985   \n",
-       "...    ...       ...        ...    ...        ...          ...     ...   \n",
-       "4091    22  51066161          C      T       ARSA         HGNC     713   \n",
-       "4092    22  51066170          A      T       ARSA         HGNC     713   \n",
-       "4093    22  51066173         GC      G       ARSA         HGNC     713   \n",
-       "4094    22  51066176          A      G       ARSA         HGNC     713   \n",
-       "4095    22  51066194         GC      G       ARSA         HGNC     713   \n",
-       "\n",
-       "                 ENST         HGVSc                               Consequence  \\\n",
-       "0     ENST00000319363        c.1A>C                                start_lost   \n",
-       "1     ENST00000319363  c.112_119del                        frameshift_variant   \n",
-       "2     ENST00000319363    c.163+1G>A                      splice_donor_variant   \n",
-       "3     ENST00000319363  c.166_169dup  frameshift_variant&splice_region_variant   \n",
-       "4     ENST00000319363      c.256C>T                               stop_gained   \n",
-       "...               ...           ...                                       ...   \n",
-       "4091  ENST00000216124       c.47G>A                          missense_variant   \n",
-       "4092  ENST00000216124       c.38T>A                          missense_variant   \n",
-       "4093  ENST00000216124       c.34del                        frameshift_variant   \n",
-       "4094  ENST00000216124       c.32T>C                          missense_variant   \n",
-       "4095  ENST00000216124       c.13del                        frameshift_variant   \n",
-       "\n",
-       "      ... Strand DS_AG DS_AL DS_DG DS_DL DP_AG DP_AL DP_DG DP_DL MaxSpliceAI  \n",
-       "0     ...      +  0.00  0.00  0.01  0.00  2870  3730   192   137        0.01  \n",
-       "1     ...      +  0.01  0.00  0.01  0.00  2761  1059   585   212        0.01  \n",
-       "2     ...      +  0.17  0.32  0.21  0.96    47    96    45    -1        0.96  \n",
-       "3     ...      +  0.01  0.04  0.01  0.01   784    59  -518  -477        0.04  \n",
-       "4     ...      +  0.01  0.08  0.02  0.00  -706   -33   767    54        0.08  \n",
-       "...   ...    ...   ...   ...   ...   ...   ...   ...   ...   ...         ...  \n",
-       "4091  ...      -  0.04  0.00  0.01  0.00    59  -744   258   165        0.04  \n",
-       "4092  ...      -  0.20  0.08  0.00  0.01    -2    50  -576   249        0.20  \n",
-       "4093  ...      -  0.12  0.02  0.00  0.02    47  -316  -432   153        0.12  \n",
-       "4094  ...      -  0.00  0.04  0.00  0.03  -319    44  -582   243        0.04  \n",
-       "4095  ...      -  0.15  0.02  0.00  0.01    26  -337  -453  -505        0.15  \n",
-       "\n",
-       "[4096 rows x 22 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
    ]
   },
   {
