--- a/ValidationData/TP/additional/publish.ipynb
+++ b/ValidationData/TP/additional/publish.ipynb
@@ -205,7 +205,7 @@
     "allmut = allmut[['ID', 'mutype', 'clinvar_clnsig', 'tag', 'deletion', 'insertion', 'expected_inheritance', 'gnomad_AF']]\n",
     "\n",
     "# Load VCF file annoteted by analysis pipeline\n",
-    "df = pd.read_pickle('splai_vep_vcfs/hgmd_dm/allchr.DM.splai.vep.nondel.enst.prescore.hgnconly.pkl')\n",
+    "df = pd.read_pickle('splai_vep_vcfs/hgmd_dm/allchr.DM.splai.vep.nondel.enst.prescore.hgnconly.v2.pkl')\n",
     "df['HGVSc'] = df['HGVSc'].str.replace('c.', '')\n",
     "df['ID'] = df['CHROM'].astype(str) + '-' + df['POS'].astype(str) + '-' + df['HGVSc']\n",
     "\n",
@@ -246,7 +246,7 @@
    "source": [
     "# Annotating the label and variant_id (CHROM-POS-REF_ALT)\n",
     "# When mutype is splice, the label is 1, otherwise 0\n",
-    "df_gnomad = pd.read_pickle('splai_vep_vcfs/gnomadv211/allchr.gnomad.splai.vep.vcf.enst.prescore.hgnconly.pkl')\n",
+    "df_gnomad = pd.read_pickle('splai_vep_vcfs/gnomadv211/allchr.gnomad.splai.vep.vcf.enst.prescore.hgnconly.v2.pkl')\n",
     "df_gnomad['is_ORF'] = df_gnomad.apply(is_orf_variants, axis=1)\n",
     "df_gnomad = df_gnomad[df_gnomad['is_ORF']]\n",
     "\n",
@@ -263,7 +263,7 @@
     "\n",
     "# Concatenate df_gnomad and df_non_spl\n",
     "tn = pd.concat([df_gnomad, df_non_spl], ignore_index=True)\n",
-    "tn = tn.drop_duplicates(subset=['variant_id'], keep='first')"
+    "tn = tn.drop_duplicates(subset=['variant_id'], keep='first')\n"
    ]
   },
   {
@@ -687,7 +687,7 @@
    "outputs": [],
    "source": [
     "frac = 0.8\n",
-    "random_state = 42"
+    "random_state = 12"
    ]
   },
   {
@@ -700,7 +700,7 @@
      "output_type": "stream",
      "text": [
       "TP: 18432, TN: 180958\n",
-      "TP: 17327, TN: 168992\n"
+      "Filtered out [Warning] ENST_with_Ver_not_available, TP: 17258, TN: 167371\n"
      ]
     }
    ],
@@ -712,7 +712,14 @@
     "print(f\"TP: {len(tp)}, TN: {len(tn)}\")\n",
     "tp = tp[tp['ENST_Full'] != \"[Warning] ENST_with_Ver_not_available\"]\n",
     "tn = tn[tn['ENST_Full'] != \"[Warning] ENST_with_Ver_not_available\"]\n",
-    "print(f\"TP: {len(tp)}, TN: {len(tn)}\")\n",
+    "tp = tp[tp['maxsplai'] != \"NA\"]\n",
+    "tn = tn[tn['maxsplai'] != \"NA\"]\n",
+    "print(f\"Filtered out [Warning] ENST_with_Ver_not_available, TP: {len(tp)}, TN: {len(tn)}\")\n",
+    "\n",
+    "# SpliceType != [Warning] ENST_unmatch\n",
+    "# tp = tp[tp['SpliceType'] != \"[Warning] ENST_unmatch\"]\n",
+    "# tn = tn[tn['SpliceType'] != \"[Warning] ENST_unmatch\"]\n",
+    "# print(f\"Filtered out [Warning] ENST_unmatch, TP: {len(tp)}, TN: {len(tn)}\")\n",
     "\n",
     "# Split the data into training and test sets\n",
     "tp_train = tp.sample(frac=frac, random_state=random_state)\n",
@@ -744,38 +751,34 @@
      "output_type": "stream",
      "text": [
       "###  Processed 0 solutions  ###\n",
-      "\n",
-      "===== New best AUC: 0.9787366459 with solution 41 =======\n",
-      "New best solution 40: {'s1': 2, 's2': 1, 's3': 0, 's4': -1, 's5': 0, 's6': 1, 's7': 3, 's8': 5, 's9': 4, 's10': 6, 's11': 1, 's12': -1, 's13': 0, 's14': 1} \n",
-      "\n",
-      "AUC - Framework (95%CI): 0.979 [0.9774-0.9801]\n",
-      "AUC - SpliceAI (95%CI) : 0.979 [0.9771-0.9802]\n",
-      "p-value (DeLong Test)  : 8.91e-01\n",
-      "\n",
-      "===========================================================\n",
       "###  Processed 50 solutions  ###\n",
-      "\n",
-      "===== New best AUC: 0.9793955837 with solution 57 =======\n",
-      "New best solution 56: {'s1': 2, 's2': 1, 's3': 0, 's4': -1, 's5': 0, 's6': 1, 's7': 3, 's8': 5, 's9': 4, 's10': 6, 's11': 2, 's12': -2, 's13': 0, 's14': 1} \n",
-      "\n",
-      "AUC - Framework (95%CI): 0.979 [0.9781-0.9807]\n",
-      "AUC - SpliceAI (95%CI) : 0.979 [0.9771-0.9802]\n",
-      "p-value (DeLong Test)  : 2.26e-01\n",
-      "\n",
-      "===========================================================\n",
-      "\n",
-      "===== New best AUC: 0.9794132235 with solution 58 =======\n",
-      "New best solution 57: {'s1': 2, 's2': 1, 's3': 0, 's4': -1, 's5': 0, 's6': 1, 's7': 3, 's8': 5, 's9': 4, 's10': 6, 's11': 3, 's12': -3, 's13': 0, 's14': 1} \n",
-      "\n",
-      "AUC - Framework (95%CI): 0.979 [0.9781-0.9807]\n",
-      "AUC - SpliceAI (95%CI) : 0.979 [0.9771-0.9802]\n",
-      "p-value (DeLong Test)  : 1.98e-01\n",
-      "\n",
-      "===========================================================\n",
       "###  Processed 100 solutions  ###\n",
       "###  Processed 150 solutions  ###\n",
       "###  Processed 200 solutions  ###\n",
-      "###  Processed 250 solutions  ###\n"
+      "###  Processed 250 solutions  ###\n",
+      "###  Processed 300 solutions  ###\n",
+      "###  Processed 350 solutions  ###\n",
+      "###  Processed 400 solutions  ###\n",
+      "###  Processed 450 solutions  ###\n",
+      "###  Processed 500 solutions  ###\n",
+      "###  Processed 550 solutions  ###\n",
+      "###  Processed 600 solutions  ###\n",
+      "###  Processed 650 solutions  ###\n",
+      "###  Processed 700 solutions  ###\n",
+      "###  Processed 750 solutions  ###\n",
+      "###  Processed 800 solutions  ###\n",
+      "###  Processed 850 solutions  ###\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception ignored in: <bound method IPythonKernel._clean_thread_parent_frames of <ipykernel.ipkernel.IPythonKernel object at 0x1080cf700>>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Volumes/SSD_480GB/utsu/miniconda3/envs/nar/lib/python3.8/site-packages/ipykernel/ipkernel.py\", line 775, in _clean_thread_parent_frames\n",
+      "    def _clean_thread_parent_frames(\n",
+      "KeyboardInterrupt: \n"
      ]
     }
    ],
